<resources>


    <!--  LOGIN STRINGS -->
    <string name="app_name">Hi, Cria!</string>
    <string name="app_titulo">Hi, Cria!</string>
    <string name="login_mat_hint">Matrícula</string>
    <string name="login_password_hint">Senha</string>
    <string name="login_button">Login</string>

    <!-- Main Activity string-->
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Content string-->
    <string name="atividades">ACTIVITIES</string>
    <string name="qtd_atividades">q?</string>
    <string name="score">SCORE</string>
    <string name="qtd_score">q??</string>
    <string name="nivel">LEVEL</string>
    <string name="qtd_nivel">q???</string>
    <string name="seu_nome">Your name.</string>
    <string name="hi">Hi, </string>

    <!-- Atividades  -->
    <string name="nomeAtividade">Nome da atividade</string>
    <string name="codAtividade"></string>

    <!--  Week -->
    <string name="weekScore">Week Score: </string>
    <string name="atvscore">0</string>

    <!--   Página de Atividades  -->
    <string name="scoreAtvAtual">0</string>

    <!--  Achievements-->
    <string name="achieve">My Achievements</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Adm  Screen         -->
    <string name="add">New Activity</string>
    <string name="edit">Edit Activity</string>
    <string name="performance">Performance</string>
    <string name="Schools">Schools</string>
    <string name="add_prof">Add student</string>
    <string name="back">Back</string>

    <!-- Escolha Atividade-->
    <string name="escolhaAtividade">Escolha a atividade da página </string>
    <string name="atv1">Question + 4 alternatives.</string>
    <string name="atv2">Question + Image + 4 alternatives.</string>
    <string name="atv4">Question + Video + 4 alternatives.</string>
    <string name="atv3">Question + Audio + 4 alternatives.</string>
    <string name="atv5">PDF Viewer.</string>
    <string name="atv6">Speech to text activity.</string>
    <string name="atv7">Listen the audio 3x.</string>
    <string name="setAtividade">Setting activity screen.</string>
    <string name="title_activity_teste">teste</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- loop bar -->
    <string name="enls_app_name">LoopBar view</string>

    <!-- badges  -->
    <string name="no_badge">No badge</string>
    <string name="badge_ecofriendly">Eco Friendly</string>
    <string name="badge_forest">Forest</string>
    <string name="badge_halloween">Halloween</string>
    <string name="badge_laborday">Labor Day</string>
    <string name="badge_numberone">Number One</string>
    <string name="badge_saturn">Saturn</string>
    <string name="badge_summer">Summer</string>
    <string name="badge_thanksgiving">Thanksgiving</string>
    <string name="badge_travel">Travel</string>
    <string name="badge_unicorn">Unicorn</string>
    <string name="type_here">Type here</string>
    <string name="verify">VERIFY</string>
    <string name="loading">Loading...</string>
    <string name="next">Next</string>
    <string name="play_stop">Play/Stop</string>
    <string name="listen_the_audio_3_times">Listen the audio 3 times.</string>
    <string name="instruction">Instruction.</string>
    <string name="sentence">Sentence.</string>
    <string name="answer_1">Answer 1.</string>
    <string name="answer_2">Answer 2.</string>
    <string name="answer_3">Answer 3.</string>
    <string name="answer_4">Answer 4.</string>
    <string name="how_many">How many points are worth the screen?</string>
    <string name="atv8">Type the answer.</string>
    <string name="type_the_answer_image">Type the answer+image</string>
    <string name="choose_a_game">Choose a game</string>
    <string name="memory">memory</string>
    <string name="matching_game">Matching Game</string>
    <string name="points">Points:</string>
    <string name="sound">Sound</string>
    <string name="words">Words</string>
    <string name="start">START</string>
    <string name="subtitles">subtitles:</string>
    <string name="names">Names</string>
    <string name="build_words">Build Words</string>
    <string name="games">Games</string>
    <string name="dot">.</string>
    <string name="my_best">MY BEST:</string>
    <string name="time">TIME:</string>
    <string name="game_ranking">Game Ranking</string>
    <string name="game">Game</string>
    <string name="type_the_answer_audio">type the answer + audio</string>
    <string name="enter_the_mp3_download_url">Enter the MP3 download url</string>
    <string name="enter_the_video_url">Enter the video url</string>
    <string name="type_the_answer_video">Type the answer + video</string>
    <string name="answer">Answer</string>
    <string name="answer_5">Answer 5</string>
    <string name="answer_6">Answer 6</string>
    <string name="answer_7">Answer 7</string>
    <string name="answer_8">Answer 8</string>
    <string name="answer_9">Answer 9</string>
    <string name="make_the_phrase">Make the phrase.</string>
    <string name="phonne">Phonne</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender:</string>
    <string name="feminine">feminine</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="set_function">Set function:</string>
    <string name="set_school">Set school:</string>
    <string name="register">Register</string>
    <string name="avatar">Avatar</string>
    <string name="hang">hang</string>
    <string name="word">Word:</string>
    <string name="total_points">Total Points:</string>

</resources>
