<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro"
    android:background="@color/botaoEntrar"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/branco"
        android:textSize="48sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="cursive"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center_horizontal">
    <EditText
        android:id="@+id/editFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:inputType="textPersonName"
        android:hint="First name"
        android:textColorHint="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:padding="4dp"
        android:textColor="@color/botaoEntrar"
        android:background="@color/branco"/>
        <EditText
            android:id="@+id/editSurName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:inputType="textPersonName"
            android:hint="Surname"
            android:textColorHint="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:padding="4dp"
            android:textColor="@color/botaoEntrar"
            android:background="@color/branco"/>
            <EditText
                android:id="@+id/editMatrícula"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:inputType="number"
                android:hint="Registration"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:padding="4dp"
                android:textColor="@color/botaoEntrar"
                android:background="@color/branco"/>
            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:inputType="textEmailAddress"
                android:hint="Email"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:padding="4dp"
                android:textColor="@color/botaoEntrar"
                android:background="@color/branco"/>
            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:inputType="number"
                android:hint="@string/phone"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:padding="4dp"
                android:textColor="@color/botaoEntrar"
                android:background="@color/branco"/>
            <TextView
                android:id="@+id/textsexo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@color/branco"
                />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_margin="8dp"
                    android:gravity="center_horizontal">
                    <RadioButton
                        android:id="@+id/radioFemme"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textColor="@color/branco"
                        android:layout_marginEnd="32dp"
                        android:textSize="16sp"
                        />
                    <RadioButton
                        android:id="@+id/radioMasc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textColor="@color/branco"
                        android:textSize="16sp"
                        />
                </RadioGroup>


            <TextView
                android:id="@+id/textDataNasc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textColor="@color/branco"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
            <EditText
                android:id="@+id/editDiaNasc"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:inputType="number"
                android:hint="@string/day"
                android:textColorHint="@color/colorPrimaryDark"
                android:maxLength="2"
                android:textSize="16sp"
                android:padding="4dp"
                android:textColor="@color/botaoEntrar"
                android:background="@color/branco"/>
                <EditText
                    android:id="@+id/editMesNasc"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="number"
                    android:hint="@string/month"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:maxLength="2"
                    android:textSize="16sp"
                    android:padding="4dp"
                    android:textColor="@color/botaoEntrar"
                    android:background="@color/branco"/>
                <EditText
                    android:id="@+id/editAnoNasc"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:inputType="number"
                    android:hint="@string/year"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:maxLength="4"
                    android:textSize="16sp"
                    android:padding="4dp"
                    android:textColor="@color/botaoEntrar"
                    android:background="@color/branco"/>

            </LinearLayout>
            <TextView
                android:id="@+id/textSelcFunc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/set_function"
                android:textColor="@color/branco"/>
            <Spinner
                android:id="@+id/spinnerFuncs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"

                />
            <TextView
                android:id="@+id/textSelcEscola"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/set_school"
                android:textColor="@color/branco"/>
            <Spinner
                android:id="@+id/spinnerSchool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRegister"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="48dp"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:text="@string/register"
                android:backgroundTint="@color/telaLogin"
                app:cornerRadius="8dp"
                android:background="@color/telaLogin"
                android:textColor="@color/branco"/>

            <ProgressBar
                android:id="@+id/progressBarRegister"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>