<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/typeAnswerVideoAtv11"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".fragAtv11">


    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <TextView
        android:id="@+id/txtPerguntaAtv11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autoSizeMaxTextSize="32sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/acme"
        android:text="@string/loading"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/complementoAtv11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="4dp"
        android:autoSizeMaxTextSize="28sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/acme"
        android:text="@string/loading"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <VideoView
        android:id="@+id/playerAtv11"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        />

    <ImageButton
        android:id="@+id/btnPlayStopAtv11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:src="@drawable/ic_play_arrow_black_24dp"
        android:padding="8dp"
        android:contentDescription="@string/play_stop" />
    <TextView
        android:id="@+id/respostaAtv11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/acme"
        android:text="@string/loading"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="20sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputAtv11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/answer"
            android:textColorHint="@color/colorPrimaryDark"
            android:textColor="@color/design_default_color_primary"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnVerifyAtv11"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/botaoEntrar"
            app:icon="@drawable/ic_spellcheck_white_24dp"
            android:layout_margin="8dp"
            />
    </LinearLayout>
    </LinearLayout>
  </ScrollView>

